removed illegal reflective access; sidebar of JFileChooser now filters out all the "Backups of" pseudo-volumes from TimeMachine.